#79: JavaProjectHelper-related refactorings